01-parser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: license-parser
  namespace: git-parser
spec:
  selector:
    matchLabels:
      app: license-parser
  replicas: 1
  template:
    metadata:
      labels:
        app: license-parser
    spec:
      containers:
      - name: license-parser
        image: "seredavin/git-license-parser"
