02-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: git-parser
spec:
  selector:
    matchLabels:
      app: git-parser-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: git-parser-ui
    spec:
      containers:
      - name: git-parser-ui
        image: "docker.io/bitnami/zookeeper:3.7"
        volumeMounts:
          - mountPath: /bitnami
            name: zookeeper_data
      - name: zookeeper
        image: docker.io/bitnami/kafka:3
        volumeMounts:
          - mountPath: /bitnami
            name: kafka_data
      volumes:
        - name: zookeeper_data
          emptyDir: {}
        - name: kafka_data
          emptyDir: {}
