02-persister.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persister
  namespace: git-parser
spec:
  selector:
    matchLabels:
      app: persister
  replicas: 1
  template:
    metadata:
      labels:
        app: persister
    spec:
      containers:
      - name: persister
        image: "seredavin/db-persister"
