04-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: git-parser
  labels:
    app: git-parser
spec:
  type: ClusterIP
  selector:
    app: git-parser-ui
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
