07-persister-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: persister-service
  namespace: git-parser
  labels:
    app: git-parser
spec:
  type: ClusterIP
  selector:
    app: persister
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
