08-parser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parser-service
  namespace: git-parser
  labels:
    app: git-parser
spec:
  type: ClusterIP
  selector:
    app: license-parser
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
