01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-parser-ingress
  namespace: git-parser
spec:
  rules:
  - host: git-parser.seredavin.ru
    servicePort:
    http:
      paths:
      - backend:
          serviceName: ui-service
          servicePort: 80
