03-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: myingress  
  namespace: git-parser
  annotations:    
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:  
  rules:
  - host: git-parser.seredavin.ru
    http:
      paths:      
      - path: /
        backend:
          serviceName: myapiservice
          servicePort: 80
